syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "BandBaajaVivaah.Grpc";

package weddingupdate;

service WeddingUpdateService {
  rpc SubscribeToWeddingUpdates(WeddingUpdateSubscriptionRequest) returns (stream WeddingUpdateEvent);
}

message WeddingUpdateSubscriptionRequest {
  int32 user_id = 1;
}

message WeddingUpdateEvent {
  enum UpdateType {
    CREATED = 0;
    UPDATED = 1;
    DELETED = 2;
  }
  
  UpdateType type = 1;
  WeddingDetails wedding = 2;
}

message WeddingDetails {
  int32 wedding_id = 1;
  string wedding_name = 2;
  google.protobuf.Timestamp wedding_date = 3;
  double total_budget = 4;
  int32 owner_user_id = 5;
}